src/parser/snapshots/rex__parser__tests__snapshot_accents-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\'o\")"
---
Ok(
    [
        Accent(
            Accent {
                symbol: Symbol {
                    codepoint: '\u{301}',
                    atom_type: Accent,
                },
                nucleus: [
                    Symbol(
                        Symbol {
                            codepoint: '𝑜',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
    ],
)
