src/parser/snapshots/rex__parser__tests__snapshot_accents-7.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\overbrace{1}\")"
---
Ok(
    [
        Accent(
            Accent {
                symbol: Symbol {
                    codepoint: '⏞',
                    atom_type: Over,
                },
                nucleus: [
                    Symbol(
                        Symbol {
                            codepoint: '1',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
    ],
)
