src/parser/snapshots/rex__parser__tests__snapshot_accents.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\hat{A^2}\")"
---
Ok(
    [
        Accent(
            Accent {
                symbol: Symbol {
                    codepoint: '\u{302}',
                    atom_type: Accent,
                },
                nucleus: [
                    Scripts(
                        Scripts {
                            base: Some(
                                Symbol(
                                    Symbol {
                                        codepoint: '𝐴',
                                        atom_type: Alpha,
                                    },
                                ),
                            ),
                            superscript: Some(
                                [
                                    Symbol(
                                        Symbol {
                                            codepoint: '2',
                                            atom_type: Alpha,
                                        },
                                    ),
                                ],
                            ),
                            subscript: None,
                        },
                    ),
                ],
                extend: false,
            },
        ),
    ],
)
