src/parser/snapshots/rex__parser__tests__snapshot_array-2.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\begin{array}{c}1\\\\2\\end{array}\")"
---
Ok(
    [
        Array(
            Array {
                col_format: ArrayColumnsFormatting {
                    columns: [
                        ArraySingleColumnFormatting {
                            alignment: Centered,
                            n_vertical_bars_after: 0,
                        },
                    ],
                    n_vertical_bars_before: 0,
                },
                rows: [
                    [
                        [
                            Symbol(
                                Symbol {
                                    codepoint: '1',
                                    atom_type: Alpha,
                                },
                            ),
                        ],
                    ],
                    [
                        [
                            Symbol(
                                Symbol {
                                    codepoint: '2',
                                    atom_type: Alpha,
                                },
                            ),
                        ],
                    ],
                ],
                left_delimiter: None,
                right_delimiter: None,
            },
        ),
    ],
)
