src/parser/snapshots/rex__parser__tests__snapshot_array-6.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\begin{array}{cc}1 \\\\ 2\")"
---
Err(
    ExpectedDelimiter {
        found: Eof,
        expected: EndEnv(
            Array,
        ),
    },
)
